---------------------------------------------------------------------------
Version 3.15.1 (rgerhards), 2008-04-??
- disabled atomic operations for the time being because they introduce some
  cross-platform trouble - need to see how to fix this in the best 
  possible way
- added librelp check via PKG_CHECK thanks to Michael Biebl's patch
- file relputil.c deleted, is not actually needed
---------------------------------------------------------------------------
Version 3.15.0 (rgerhards), 2008-04-01
- major new feature: imrelp/omrelp support reliable delivery of syslog
  messages via the RELP protocol and librelp (http://www.librelp.com).
  Plain tcp syslog, so far the best reliability solution, can lose
  messages when something goes wrong or a peer goes down. With RELP,
  this can no longer happen. See imrelp.html for more details.
- bugfix: rsyslogd was no longer build by default; man pages are 
  only installed if corresponding option is selected. Thanks to
  Michael Biebl for pointing these problems out.
---------------------------------------------------------------------------
Version 3.13.0-dev0 (rgerhards), 2008-03-31
- bugfix: accidently set debug option in 3.12.5 reset to production
  This option prevented dlclose() to be called. It had no real bad effects,
  as the modules were otherwise correctly deinitialized and dlopen()
  supports multiple opens of the same module without any memory footprint.
- removed --enable-mudflap, added --enable-valgrind ./configure setting
- bugfix: tcp receiver could segfault due to uninitialized variable
- docfix: queue doc had a wrong directive name that prevented max worker
  threads to be correctly set
- worked a bit on atomic memory operations to support problem-free
  threading (only at non-intrusive places)
- added a --enable/disable-rsyslogd configure option so that
  source-based packaging systems can build plugins without the need
  to compile rsyslogd
- some cleanup
- test of potential new version number scheme