@@ -5,6 +5,8 @@ Version 3.15.1 (rgerhards), 2008-04-??
   possible way
 - added librelp check via PKG_CHECK thanks to Michael Biebl's patch
 - file relputil.c deleted, is not actually needed
+- added more meaningful error messages to rsyslogd (when some errors
+  happens during startup)
 ---------------------------------------------------------------------------
 Version 3.15.0 (rgerhards), 2008-04-01
 - major new feature: imrelp/omrelp support reliable delivery of syslog
